@@ -12,6 +12,7 @@ xine-lib (1.0.1)
   * Shoutcast: fixed meta info handling
   * MMST: fixed incorrect command length
   * support for WMA Voice codec
+  * add limited support for character entities to the XML parser
 
 xine-lib (1.0)
   * unbreak DXR3 plugin
